[package]
name = "onomy_tests"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
name = "common"
path = "src/lib/common.rs"

[dependencies]
awint = { version = "0.10", default-features = false, features = ["std"] }
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
serde_json = "1.0"
# TODO we will use a git link in the mid term
super_orchestrator = { path = "../super_orchestrator", default-features = false, features = ["serde_json_support", "env_logger_support", "ctrlc_support"] }
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.2", features = ["derive"] }
