[package]
name = "onomy_test_lib"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
awint = { version = "0.11", default-features = false, features = ["std"] }
bech32 = "0.9.1"
clap = { version = "4.3", features = ["derive", "env"] }
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
musli = "0.0.49"
serde-transcode = "1.1"
serde_json = "1.0"
serde_yaml = "0.9"
super_orchestrator = { version = "0.5", default-features = false, features = ["serde_json_support", "env_logger_support", "ctrlc_support", "serde_yaml_support", "toml_support", "nix_support"] }
#super_orchestrator = { git = "https://github.com/AaronKutch/super_orchestrator", rev = "2661d4b0f1031b626b84eebbee5859b2e62aed07", default-features = false, features = ["serde_json_support", "env_logger_support", "ctrlc_support", "serde_yaml_support", "toml_support", "nix_support"] }
#super_orchestrator = { path = "../../super_orchestrator", default-features = false, features = ["serde_json_support", "env_logger_support", "ctrlc_support", "serde_yaml_support", "toml_support", "nix_support"] }
tokio = { version = "1.29", features = ["full"] }
toml = "0.7"

[features]
ron_support = ["super_orchestrator/ron_support"]
reqwest_support = ["super_orchestrator/reqwest_support"]
hyper_support = ["super_orchestrator/hyper_support"]
