[package]
name = "onomy_test_lib"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
awint = { version = "0.12", default-features = false, features = ["std"] }
bech32 = "0.9.1"
clap = { version = "4", features = ["derive", "env"] }
env_logger = "0.10"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde-transcode = "1.1"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
#super_orchestrator = { version = "0.8", default-features = false, features = ["env_logger_support", "ctrlc_support", "nix_support"] }
super_orchestrator = { git = "https://github.com/AaronKutch/super_orchestrator", rev = "156246dd1162a4da554438dba7a5439e97304d5b", default-features = false, features = ["env_logger_support", "ctrlc_support", "nix_support"] }
#super_orchestrator = { path = "../../super_orchestrator", default-features = false, features = [ "env_logger_support", "ctrlc_support", "nix_support"] }
tokio = { version = "1", features = ["full"] }
toml = "0.7"
u64_array_bigints = { version = "0.3", default-features = false, features = ["std"] }

[features]
